# rust-blog-api

./: .gitignore  Cargo.toml  diesel.toml
migrations/2025-06-06-01_create_users/: up.sql
migrations/2025-06-06-02_create_posts/: up.sql
migrations/2025-06-07-111643_create_tags/: up.sql
migrations/2025-06-07-111811_create_posts_tags/: up.sql
src/: main.rs  models.rs  responses.rs  schema.rs
