[package]
name = "rust_blog_api"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"

