[package]
name = "rust_blog_api"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.4"

[build-dependencies]
diesel_cli = { version = "2.2.0", features = ["postgres"] }

[features]
default = []